--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -63,4 +63,4 @@ jobs:
 
     steps:
       - name: Trigger Render
-        run: curl -X GET ${{ RENDER_HOOK }}
+        run: curl -X GET ${{ secrets.RENDER_HOOK }}
